Revert "feat: define connectionOptions schema for WhatsApp connection parameters"
This reverts commit 1f90ba8ef4f165587ae3d5a45973a1ecbb607d25.
