# src/controllers/connections/types.ts
@@ -16,39 +16,6 @@ export const phoneNumberParams = t.Object({
   }),
 });
 
-export const connectionOptions = t.Object({
-  clientName: t.Optional(
-    t.String({
-      description: "Name of the client to be used on WhatsApp connection",
-      example: "My WhatsApp Client",
-    }),
-  ),
-  webhookUrl: t.String({
-    format: "uri",
-    description: "URL for receiving updates",
-    example: "http://localhost:3026/whatsapp/+1234567890",
-  }),
-  webhookVerifyToken: t.String({
-    minLength: 6,
-    description: "Token for verifying webhook",
-    example: "a3f4b2",
-  }),
-  includeMedia: t.Optional(
-    t.Boolean({
-      description:
-        "Include media in messages.upsert event payload as base64 string",
-      // TODO(v2): Change default to false.
-      default: true,
-    }),
-  ),
-  syncFullHistory: t.Optional(
-    t.Boolean({
-      description: "Sync full history of messages on connection.",
-      default: false,
-    }),
-  ),
-});
-
 export const iMessageKey = t.Object({
   id: t.Optional(t.String()),
   remoteJid: t.Optional(t.String()),
