# swagger.json
@@ -172,11 +172,6 @@
                     "description": "Include media in messages.upsert event payload as base64 string",
                     "default": true,
                     "type": "boolean"
-                  },
-                  "syncFullHistory": {
-                    "description": "Sync full history of messages on connection.",
-                    "default": false,
-                    "type": "boolean"
                   }
                 },
                 "required": [
@@ -210,11 +205,6 @@
                     "description": "Include media in messages.upsert event payload as base64 string",
                     "default": true,
                     "type": "boolean"
-                  },
-                  "syncFullHistory": {
-                    "description": "Sync full history of messages on connection.",
-                    "default": false,
-                    "type": "boolean"
                   }
                 },
                 "required": [
@@ -247,11 +237,6 @@
                   "includeMedia": {
                     "description": "Include media in messages.upsert event payload as base64 string",
                     "default": true,
-                    "type": "boolean"
-                  },
-                  "syncFullHistory": {
-                    "description": "Sync full history of messages on connection.",
-                    "default": false,
                     "type": "boolean"
                   }
                 },
